<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smooth</name>
  <version>0.0.1</version>
  <description>Lie theory for robotics</description>

  <author>Petter Nilsson</author>
  <maintainer email="pettni@umich.edu">Petter Nilsson</maintainer>
  <license>MIT</license>

  <depend>eigen</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
